paragraf je pomaknut izvan button kontejnera

--- a/index.html
+++ b/index.html
@@ -46,25 +46,24 @@
 			<div class="main_page__container">
 				<h1><span>Hello,</span> a bit about me:</h1>
 				<div class="main_page-button__container">
-					<button class="work_btn" id="btn_1">
+					<button class="work_btn">
 						<a href="!#">My resume</a>
 					</button>
-					<button class="work_btn" id="btn_2">
+					<button class="work_btn">
 						<a href="!#">My work</a>
 					</button>
-					<button class="work_btn" id="btn_3">
+					<button class="work_btn">
 						<a href="!#">My skills</a>
 					</button>
-
-					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
-						inventore ullam commodi. Aut sunt eum odit. Ut ullam error sed cum
-						provident, itaque, neque facilis excepturi, laboriosam veniam
-						eveniet? Dignissimos temporibus quis eaque aspernatur ipsum
-						praesentium, maiores repellendus provident culpa quia, eveniet magni
-						dolor necessitatibus, molestiae ut porro molestias quisquam!
-					</p>
 				</div>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
+					inventore ullam commodi. Aut sunt eum odit. Ut ullam error sed cum
+					provident, itaque, neque facilis excepturi, laboriosam veniam
+					eveniet? Dignissimos temporibus quis eaque aspernatur ipsum
+					praesentium, maiores repellendus provident culpa quia, eveniet magni
+					dolor necessitatibus, molestiae ut porro molestias quisquam!
+				</p>
 			</div>
 		</main>
 		<footer class="footer">
