--- a/index.html
+++ b/index.html
@@ -57,15 +57,71 @@
 					</button>
 				</div>
 				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
-					inventore ullam commodi. Aut sunt eum odit. Ut ullam error sed cum
-					provident, itaque, neque facilis excepturi, laboriosam veniam
-					eveniet? Dignissimos temporibus quis eaque aspernatur ipsum
-					praesentium, maiores repellendus provident culpa quia, eveniet magni
-					dolor necessitatibus, molestiae ut porro molestias quisquam!
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad inventore
+					ullam commodi. Aut sunt eum odit. Ut ullam error sed cum provident,
+					itaque, neque facilis excepturi, laboriosam veniam eveniet?
+					Dignissimos temporibus quis eaque aspernatur ipsum praesentium,
+					maiores repellendus provident culpa quia, eveniet magni dolor
+					necessitatibus, molestiae ut porro molestias quisquam!
 				</p>
 			</div>
 		</main>
+
+		<section class="projects">
+			<div class="projects__container">
+				<h1>My Projects</h1>
+				<div class="projects__menu">
+					<div class="projects__menu-list">
+						<img src="./img/project-1.jpg" alt="project1" />
+						<p>Lorem ipsum dolor sit</p>
+						<div class="projects__btn">
+							<a href="!#"><i class="far fa-eye"></i>Preview</a>
+							<a href="!#"><i class="fab fa-github"></i> Github</a>
+						</div>
+					</div>
+					<div class="projects__menu-list">
+						<img src="./img/project-2.jpg" alt="project2" />
+						<p>Lorem ipsum dolor sit</p>
+						<div class="projects__btn">
+							<a href="!#"><i class="far fa-eye"></i>Preview</a>
+							<a href="!#"><i class="fab fa-github"></i> Github</a>
+						</div>
+					</div>
+					<div class="projects__menu-list">
+						<img src="./img/project-3.jpg" alt="project3" />
+						<p>Lorem ipsum dolor sit</p>
+						<div class="projects__btn">
+							<a href="!#"><i class="far fa-eye"></i>Preview</a>
+							<a href="!#"><i class="fab fa-github"></i> Github</a>
+						</div>
+					</div>
+					<div class="projects__menu-list">
+						<img src="./img/project-4.jpg" alt="project4" />
+						<p>Lorem ipsum dolor sit</p>
+						<div class="projects__btn">
+							<a href="!#"><i class="far fa-eye"></i>Preview</a>
+							<a href="!#"><i class="fab fa-github"></i> Github</a>
+						</div>
+					</div>
+					<div class="projects__menu-list">
+						<img src="./img/project-5.jpg" alt="project5" />
+						<p>Lorem ipsum dolor sit</p>
+						<div class="projects__btn">
+							<a href="!#"><i class="far fa-eye"></i>Preview</a>
+							<a href="!#"><i class="fab fa-github"></i> Github</a>
+						</div>
+					</div>
+					<div class="projects__menu-list">
+						<img src="./img/project-6.jpg" alt="project6" />
+						<p>Lorem ipsum dolor sit</p>
+						<div class="projects__btn">
+							<a href="!#"><i class="far fa-eye"></i>Preview</a>
+							<a href="!#"><i class="fab fa-github"></i> Github</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 		<footer class="footer">
 			<div class="footer__container">
 				<div class="social_media">
