dodavanje referenci na djelovima stranice

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 				</div>
 				<nav class="navbar__menu">
 					<li class="navbar__menu-list">
-						<a href="!#" class="navbar__menu-link">Home</a>
+						<a href="#home" class="navbar__menu-link">Home</a>
 					</li>
 					<li class="navbar__menu-list">
 						<a href="!#" class="navbar__menu-link">Resume</a>
 					</li>
 					<li class="navbar__menu-list">
-						<a href="!#" class="navbar__menu-link">Projects</a>
+						<a href="#projects" class="navbar__menu-link">Projects</a>
 					</li>
 					<li class="navbar__menu-list">
-						<a href="!#" class="navbar__menu-link">Contact</a>
+						<a href="#contact" class="navbar__menu-link">Contact</a>
 					</li>
 				</nav>
 
@@ -42,7 +42,7 @@
 				</div>
 			</div>
 		</header>
-		<main class="main_page">
+		<main class="main_page" id="home">
 			<div class="main_page__container">
 				<h1><span>Hello,</span> a bit about me:</h1>
 				<div class="main_page-button__container">
@@ -67,7 +67,7 @@
 			</div>
 		</main>
 
-		<section class="projects">
+		<section class="projects" id="projects">
 			<div class="projects__container">
 				<h1>My Projects</h1>
 				<div class="projects__menu">
