--- a/index.html
+++ b/index.html
@@ -124,11 +124,37 @@
 		</section>
 		<footer class="footer">
 			<div class="footer__container">
-				<div class="social_media">
-					<i class="fab fa-facebook"></i>
-					<i class="fab fa-twitter"></i>
-					<i class="fab fa-instagram"></i>
-					<i class="fab fa-whatsapp"></i>
+				<div class="footer-icons__container">
+					<div class="footer__navigation">
+						<li class="footer__menu-list">
+							<a href="#home" class="footer__menu-link">Home</a>
+						</li>
+						<li class="footer__menu-list">
+							<a href="!#" class="footer__menu-link">Resume</a>
+						</li>
+						<li class="footer__menu-list">
+							<a href="#projects" class="footer__menu-link">Projects</a>
+						</li>
+						<li class="footer__menu-list">
+							<a href="#contact" class="footer__menu-link">Contact</a>
+						</li>
+					</div>
+					<div class="footer-contact__container">
+						<a href="!#"><i class="fas fa-phone-alt"></i>385 95 ....</a>
+						<a href="!#"><i class="far fa-envelope"></i>email123@email.com</a>
+						<a href="!#"><i class="fab fa-whatsapp"></i>+385 95 ....</a>
+						<a href="!#"><i class="fab fa-viber"></i>+385 95 ....</a>
+					</div>
+					<div class="social_media">
+						<i class="fab fa-facebook"></i>
+						<i class="fab fa-twitter"></i>
+						<i class="fab fa-instagram"></i>
+						<i class="fab fa-github"></i>
+					</div>
+
+					<div class="footer-arrow__container">
+						<button><a href="!#"><i class="fas fa-chevron-up"></i></a></button>
+					</div>
 				</div>
 				<div class="copyright">
 					<p>&copy; Copyright 2021</p>
