--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 				</div>
 				<nav class="navbar__menu">
 					<li class="navbar__menu-list">
-						<a href="#home" class="navbar__menu-link">Home</a>
+						<a href="#home" class="navbar__menu-link" id="home-page">Home</a>
 					</li>
 					<li class="navbar__menu-list">
-						<a href="!#" class="navbar__menu-link">Resume</a>
+						<a href="!#" class="navbar__menu-link" id="resume-page">Resume</a>
 					</li>
 					<li class="navbar__menu-list">
-						<a href="#projects" class="navbar__menu-link">Projects</a>
+						<a href="#projects" class="navbar__menu-link" id="projects-page">Projects</a>
 					</li>
 					<li class="navbar__menu-list">
-						<a href="#contact" class="navbar__menu-link">Contact</a>
+						<a href="#contact" class="navbar__menu-link" id="contact-page">Contact</a>
 					</li>
 				</nav>
 
