--- a/index.html
+++ b/index.html
@@ -70,6 +70,44 @@
 				</p>
 			</div>
 		</main>
+
+		<section class="experience">
+			<div class="experience__container">
+				<h1>My Experience</h1>
+				<div class="experience_tables">
+					<div class="experience_table">
+						<h2 class="text-secondary">2017 - Current</h2>
+						<h3>Google</h3>
+						<h6>Full Stack Developer</h6>
+						<p>
+							Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat
+							vero dolores eum ut, culpa ullam quis quasi exercitationem in
+							adipisci.
+						</p>
+					</div>
+					<div class="experience_table">
+						<h2 class="text-secondary">2015 - 2017</h2>
+						<h3>Microsoft</h3>
+						<h6>Front End Developer</h6>
+						<p>
+							Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat
+							vero dolores eum ut, culpa ullam quis quasi exercitationem in
+							adipisci.
+						</p>
+					</div>
+					<div class="experience_table">
+						<h2 class="text-secondary">2012 - 2015</h2>
+						<h3>Web Design Co.</h3>
+						<h6>Graphic Designer</h6>
+						<p>
+							Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat
+							vero dolores eum ut, culpa ullam quis quasi exercitationem in
+							adipisci.
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
 		<section class="projects" id="projects">
 			<div class="projects__container">
 				<h1>My Projects</h1>
