--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<a href="#home" class="navbar__menu-link" id="home-page">Home</a>
 					</li>
 					<li class="navbar__menu-list">
-						<a href="!#" class="navbar__menu-link" id="resume-page">Resume</a>
+						<a href="#exp" class="navbar__menu-link" id="exp-page">Experience</a>
 					</li>
 					<li class="navbar__menu-list">
 						<a href="#projects" class="navbar__menu-link" id="projects-page"
@@ -54,10 +54,10 @@
 						<a href="!#">My resume</a>
 					</button>
 					<button class="work_btn">
-						<a href="!#">My work</a>
+						<a href="#projects">My projects</a>
 					</button>
 					<button class="work_btn">
-						<a href="!#">My skills</a>
+						<a href="#exp">My experience</a>
 					</button>
 				</div>
 				<p>
@@ -71,7 +71,7 @@
 			</div>
 		</main>
 
-		<section class="experience">
+		<section class="experience" id="exp">
 			<div class="experience__container">
 				<h1>My Experience</h1>
 				<div class="experience_tables">
