dodavanje rotacije za hamburger

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 				</nav>
 
 				<div class="navbar__hamburger">
-					<li class="line"></li>
-					<li class="line"></li>
-					<li class="line"></li>
+					<li class="navbar__hamburger-line"></li>
+					<li class="navbar__hamburger-line"></li>
+					<li class="navbar__hamburger-line"></li>
 				</div>
 			</div>
 		</header>
